--- a/Historico.html
+++ b/Historico.html
@@ -98,8 +98,8 @@
           </div>
         </div>
     </main>
-    <script src="script/historico.js"></script>
-    <script src="script/home.js"></script>
+    <script src="scripts/historico.js"></script>
+    <script src="scripts/home.js"></script>
   </body>
 </html>
 
