--- a/Clientes.html
+++ b/Clientes.html
@@ -196,8 +196,8 @@
     <!-- Notificação -->
     <div class="notification" id="notification"></div>
 
-    <script src="script/cadastro.js"></script>
-    <script src="script/home.js"></script>
+    <script src="scripts/cadastro.js"></script>
+    <script src="scripts/home.js"></script>
     </script>
   </body>
 </html>
