--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
             <i class="fas fa-database"></i>Cadastros
         </a>
         <div class="dropdown-container" id="dropdownContainer">
-            <a href="clientes.html"> <i class="fas fa-users"></i>Clientes </a>
+            <a href="Clientes.html"> <i class="fas fa-users"></i>Clientes </a>
             <a href="Auditor.html">
             <i class="fas fa-user-check"></i>Auditores
             </a>
